--- a/ask/qa/templates/question_add.html
+++ b/ask/qa/templates/question_add.html
@@ -1,6 +1,6 @@
 {% for e in form.non_field_errors %}
 <div class="alert alert-danger">{{ e }}</div>
-{% endif %}
+{% endfor %}
 <form class="form-horizontal" method="post" action="/ask/">
     {% csrf_token %}
   <fieldset>
